// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component : Modal Snapshot : not visible 1`] = `
<DocumentFragment>
  <div
    data-testid="target-id"
    id="target-id"
  >
    <div
      class="sc-gvZAcH sc-kRRyDe ktiroQ eHHmDD"
    >
      <div
        class="sc-gvZAcH sc-knuQbY ktiroQ cynlBi"
      >
        modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component : Modal Snapshot : visible 1`] = `
<DocumentFragment>
  <div
    data-testid="target-id"
    id="target-id"
  >
    <div
      class="sc-gvZAcH sc-kRRyDe kvCcjJ eHHmDD"
    >
      <div
        class="sc-gvZAcH sc-knuQbY kvCcjJ cynlBi"
      >
        modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
